added team pages

--- a/templates/team.html
+++ b/templates/team.html
@@ -19,15 +19,20 @@
     <a href="yessenia" class="btn btn-lg btn-info">Yessenia</a>
       <img class = "img-circle" width="100" src = "static/images/person.jpg">
     <br>
+
     <a href="person1" class="btn btn-lg btn-info">Person 1</a>
       <img class = "img-circle" width="100" src = "static/images/person.jpg">
     <br>
-    <a href="person1" class="btn btn-lg btn-info">Person 1</a>
+    <a href="person2" class="btn btn-lg btn-info">Person 2</a>
       <img class = "img-circle" width="100" src = "static/images/person.jpg">
     <br>
-    <a href="person1" class="btn btn-lg btn-info">Person 1</a>
+    <a href="person3" class="btn btn-lg btn-info">Person 3</a>
       <img class = "img-circle" width="100" src = "static/images/person.jpg">
     <br>
+    <a href="person4" class="btn btn-lg btn-info">Person 4</a>
+      <img class = "img-circle" width="100" src = "static/images/person.jpg">
+    <br>
+
   </p>
 </div>
 
