--- a/templates/main.html
+++ b/templates/main.html
@@ -2,7 +2,8 @@
 {% block content %}
 
 <div class="jumbotron">
-  <h1 class="text-center">GirlCode</h1>
+  <h1 class="text-center">GirlCode!</h1>
+  <p> We rule!</p>
 </div>
 
 <div class="text-center">
