--- a/templates/yessenia.html
+++ b/templates/yessenia.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="bg-primary">Yessenia's short bio!!</h1>
-<p> I was born in ...s</p>
+<h1 class="bg-primary">Yessenia's short bio!!!!!!</h1>
+<p> I was born in Jalisco, Mexico.</p>
 <p> I grew up in .. </p>
 <p> My greatest dream is to .... </p>
 <p> My family live in .... </p>
