--- a/templates/yessenia.html
+++ b/templates/yessenia.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="bg-primary">Yessenia's short bio!!!!!!</h1>
+<h1 class="bg-primary">Yessenia's short bio!</h1>
 <p> I was born in Jalisco, Mexico.</p>
 <p> I grew up in .. </p>
 <p> My greatest dream is to .... </p>
 <p> My family live in .... </p>
-<img src = "static/images/person.jpg" width="500">
+<img src = "static/images/yessenia.jpg" width="500">
 </p>
 
 
