updated people pages

--- a/templates/person2.html
+++ b/templates/person2.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="bg-primary">Person 2's short bio!!</h1>
+<h1 class="bg-primary">Daniella's short bio!!</h1>
 <p> I was born in ...s</p>
 <p> I grew up in .. </p>
 <p> My greatest dream is to .... </p>
