--- a/templates/main.html
+++ b/templates/main.html
@@ -2,9 +2,11 @@
 {% block content %}
 
 <div class="jumbotron">
-  <h1 class="text-center">GirlCode!</h1>
-  <p> We rule!</p>
+  <img src = "static/images/logologo.jpg" width="500">
+  </p>
+  <p> Rate or view reviews on the food in the dinning halls before you choose Usdan or Sherman.</p>
 </div>
+
 
 <div class="text-center">
   <p class="text-warning">
