--- a/templates/person1.html
+++ b/templates/person1.html
@@ -2,11 +2,11 @@
 {% block content %}
 
 <h1 class="bg-primary">Catherine's short bio!!</h1>
-<p> I was born in ...s</p>
-<p> I grew up in .. </p>
-<p> My greatest dream is to .... </p>
-<p> My family live in .... </p>
-<img src = "static/images/person.jpg" width="500">
+<p> I was born in Houston, Texas.</p>
+<p> I grew up in Houston, Texas. </p>
+<p> My greatest dream is to help and motivate youth towards a path of higher education. </p>
+<p> My family live in Houston as well. </p>
+<img src = "static/images/cat.jpg" width="500">
 </p>
 
 
