--- a/templates/person4.html
+++ b/templates/person4.html
@@ -2,11 +2,11 @@
 {% block content %}
 
 <h1 class="bg-primary">Denezia's short bio!!</h1>
-<p> I was born in ...s</p>
-<p> I grew up in .. </p>
-<p> My greatest dream is to .... </p>
-<p> My family live in .... </p>
-<img src = "static/images/person.jpg" width="500">
+<p> I was born in Worcester.</p>
+<p> I grew up in Worcester. </p>
+<p> My greatest dream is to fight injustice as a profession. </p>
+<p> My family lives in Worcester as well. </p>
+<img src = "static/images/denezia.jpg" width="500">
 </p>
 
 
