--- a/templates/review.html
+++ b/templates/review.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="jumbotron">
-  <h1>Sherman Dining Hall</h1>
+  <h1>Which Dining Hall?</h1>
     <p class="text-warning">
       Make a review!
     </p>
