--- a/templates/team.html
+++ b/templates/team.html
@@ -4,33 +4,31 @@
 <div class="jumbotron">
   <h1>Mission Statement</h1>
   <div>
-    Our goal with this app is to ....
-  </div>
+    Our goal with this app is to allow students to rate and see rates for the food at Usdan
+    and Sherman before wasting a meal swipe on food that may suck.
   <div class="jumbotron">
     <h2> Team Members:</h2>
   <p class="text-warning">
-    Meet our great team!
+    Meet the members of Girl Code!
     <br>
 
 
-    <a href="kamil" class="btn btn-lg btn-info">Kamil</a>
-      <img class = "img-circle" width="100" src = "static/images/person.jpg">
-    <br>
+
     <a href="yessenia" class="btn btn-lg btn-info">Yessenia</a>
-      <img class = "img-circle" width="100" src = "static/images/person.jpg">
+      <img class = "img-circle" width="100" src = "static/images/yessi.jpg">
     <br>
 
-    <a href="person1" class="btn btn-lg btn-info">Person 1</a>
-      <img class = "img-circle" width="100" src = "static/images/person.jpg">
+    <a href="person1" class="btn btn-lg btn-info">Catherine</a>
+      <img class = "img-circle" width="100" src = "static/images/cat.jpg">
     <br>
-    <a href="person2" class="btn btn-lg btn-info">Person 2</a>
-      <img class = "img-circle" width="100" src = "static/images/person.jpg">
+    <a href="person2" class="btn btn-lg btn-info">Daniella </a>
+      <img class = "img-circle" width="100" src = "static/images/dani.jpg">
     <br>
-    <a href="person3" class="btn btn-lg btn-info">Person 3</a>
-      <img class = "img-circle" width="100" src = "static/images/person.jpg">
+    <a href="person3" class="btn btn-lg btn-info">Lola     </a>
+      <img class = "img-circle" width="100" src = "static/images/Lola.jpg">
     <br>
-    <a href="person4" class="btn btn-lg btn-info">Person 4</a>
-      <img class = "img-circle" width="100" src = "static/images/person.jpg">
+    <a href="person4" class="btn btn-lg btn-info">Denezia  </a>
+      <img class = "img-circle" width="100" src = "static/images/denezia.jpg">
     <br>
 
   </p>
