--- a/templates/yessenia.html
+++ b/templates/yessenia.html
@@ -3,12 +3,12 @@
 
 <h1 class="bg-primary">Yessenia's short bio!</h1>
 <p> I was born in Ayotlan Jalisco, Mexico.</p>
-<p> I grew up in Waltham, Massachusetts </p>
+<p> I grew up in Waltham, Massachusetts since the age of four. </p>
 <p> My greatest dream is to buy my parents a house because they are the reason for all my achievments.
-They are very supportive and have always taught me that school 
-comes before anything  </p>
+They are very supportive and have always taught me that school
+comes before anything.  </p>
 <p> My parents and 11 year old sister live with me in Waltham. But the rest of my family lives in Mexico. </p>
-<img src = "static/images/yessenia.jpg" width="500">
+<img src = "static/images/yessi.jpg" width="500">
 </p>
 
 
