--- a/templates/person2.html
+++ b/templates/person2.html
@@ -2,11 +2,11 @@
 {% block content %}
 
 <h1 class="bg-primary">Daniella's short bio!!</h1>
-<p> I was born in ...s</p>
-<p> I grew up in .. </p>
-<p> My greatest dream is to .... </p>
-<p> My family live in .... </p>
-<img src = "static/images/person.jpg" width="500">
+<p> I was born in Santo Domingo,Dominan Republic. </p>
+<p> I grew up in the Domican Republic most of my life. </p>
+<p> My greatest dream is to become a psychologisy and work with people in need of assistance with their speaking. </p>
+<p> I live in Amityville, a town in Long Island, New York. </p>
+<img src = "static/images/dani.jpg" width="500">
 </p>
 
 
