--- a/templates/person3.html
+++ b/templates/person3.html
@@ -2,11 +2,11 @@
 {% block content %}
 
 <h1 class="bg-primary">Lola's short bio!!</h1>
-<p> I was born in ...s</p>
-<p> I grew up in .. </p>
-<p> My greatest dream is to .... </p>
-<p> My family live in .... </p>
-<img src = "static/images/person.jpg" width="500">
+<p> I was born in Nigeria. </p>
+<p> I grew up in Harlem, New York. </p>
+<p> My greatest dream is to graduate from Brandeis and have a good job to live a comfortable life. </p>
+<p> My family live in Harlem,New York. </p>
+<img src = "static/images/Lola.jpg" width="500">
 </p>
 
 
