--- a/templates/main.html
+++ b/templates/main.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="jumbotron">
-  <img src = "static/images/logologo.jpg" width="500">
+<div class="jumbotron" style="background-color: #F3F3F3;">
+  <div class="mid">
+    <img src = "static/images/foodfeelslogo.png" width="500">
+  </div>
   </p>
   <p> Rate or view reviews on the food in the dinning halls before you choose Usdan or Sherman.</p>
 </div>
@@ -14,12 +16,13 @@
   </p>
 </div>
 
-<div class="text-center">
-  <hr>
+<hr>
+
+<div class="text-center jumbotron" style="background-color: #F3F3F3;">
   <img class="img-square">
 <h2>Where do you want to eat?</h2>
-  <a href="/review" class="btn btn-lg btn-danger">Add a review</a>
-  <a href="/show" class="btn btn-lg btn-danger">See the reviews</a>
+  <a href="/review" class="btn btn-lg btn-primary">Add a review</a>
+  <a href="/show" class="btn btn-lg btn-primary">See the reviews</a>
   <h1></h1>
   <!-- img src="/static/images/Logo.jpg" width= "60%"-->
 </div>
