--- a/templates/person2.html
+++ b/templates/person2.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="bg-primary">Daniella's short bio!!</h1>
-<p> I was born in Santo Domingo,Dominan Republic. </p>
-<p> I grew up in the Domican Republic most of my life. </p>
-<p> My greatest dream is to become a psychologisy and work with people in need of assistance with their speaking. </p>
-<p> I live in Amityville, a town in Long Island, New York. </p>
-<img src = "static/images/dani.jpg" width="500">
-</p>
+<div class="jumbotron">
+  <h1 class="">Daniella's short bio!!</h1>
+  <p> I was born in Santo Domingo,Dominan Republic. </p>
+  <p> I grew up in the Domican Republic most of my life. </p>
+  <p> My greatest dream is to become a psychologisy and work with people in need of assistance with their speaking. </p>
+  <p> I live in Amityville, a town in Long Island, New York. </p>
+  <img src = "static/images/dani.jpg" height="300">
+</div>
 
 
 {% endblock %}
