--- a/templates/person3.html
+++ b/templates/person3.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="bg-primary">Lola's short bio!!</h1>
-<p> I was born in Nigeria. </p>
-<p> I grew up in Harlem, New York. </p>
-<p> My greatest dream is to graduate from Brandeis and have a good job to live a comfortable life. </p>
-<p> My family live in Harlem,New York. </p>
-<img src = "static/images/Lola.jpg" width="500">
-</p>
+<div class="jumbotron">
+  <h1 class="">Lola's short bio!!</h1>
+  <p> I was born in Nigeria. </p>
+  <p> I grew up in Harlem, New York. </p>
+  <p> My greatest dream is to graduate from Brandeis and have a good job to live a comfortable life. </p>
+  <p> My family live in Harlem,New York. </p>
+  <img src = "static/images/Lola.jpg" height="300">
+</div>
 
 
 {% endblock %}
