--- a/templates/show.html
+++ b/templates/show.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-
-<h1 class="bg-primary">Brandeis Dining Hall Reviews</h1>
+<div class="jumbotron">
+  <h1 class="">Brandeis Dining Hall Reviews</h1>
+</div>
 
 {% for review in reviews %}
 <div class="bg-info">
