--- a/templates/yessenia.html
+++ b/templates/yessenia.html
@@ -1,15 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="bg-primary">Yessenia's short bio!</h1>
-<p> I was born in Ayotlan Jalisco, Mexico.</p>
-<p> I grew up in Waltham, Massachusetts since the age of four. </p>
-<p> My greatest dream is to buy my parents a house because they are the reason for all my achievments.
-They are very supportive and have always taught me that school
-comes before anything.  </p>
-<p> My parents and 11 year old sister live with me in Waltham. But the rest of my family lives in Mexico. </p>
-<img src = "static/images/yessi.jpg" width="500">
-</p>
+<div class="jumbotron">
+  <h1 class="">Yessenia's short bio!</h1>
+  <p> I was born in Ayotlan Jalisco, Mexico.</p>
+  <p> I grew up in Waltham, Massachusetts since the age of four. </p>
+  <p>
+    My greatest dream is to buy my parents a house because they are the reason for all my achievments.
+    They are very supportive and have always taught me that school
+    comes before anything.
+  </p>
+  <p> My parents and 11 year old sister live with me in Waltham. But the rest of my family lives in Mexico. </p>
+
+  <img src = "static/images/yessi.jpg" height="300">
+
+</div>
+
+
 
 
 {% endblock %}
