--- a/templates/person1.html
+++ b/templates/person1.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="bg-primary">Catherine's short bio!!</h1>
-<p> I was born in Houston, Texas.</p>
-<p> I grew up in Houston, Texas. </p>
-<p> My greatest dream is to help and motivate youth towards a path of higher education. </p>
-<p> My family live in Houston as well. </p>
-<img src = "static/images/cat.jpg" width="500">
-</p>
+<div class="jumbotron">
+  <h1 class="">Catherine's short bio!!</h1>
+  <p> I was born in Houston, Texas.</p>
+  <p> I grew up in Houston, Texas. </p>
+  <p> My greatest dream is to help and motivate youth towards a path of higher education. </p>
+  <p> My family live in Houston as well. </p>
+  <img src = "static/images/cat.jpg" height="300">
+</div>
 
 
 {% endblock %}
