--- a/templates/person4.html
+++ b/templates/person4.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="bg-primary">Denezia's short bio!!</h1>
-<p> I was born in Worcester.</p>
-<p> I grew up in Worcester. </p>
-<p> My greatest dream is to fight injustice as a profession. </p>
-<p> My family lives in Worcester as well. </p>
-<img src = "static/images/denezia.jpg" width="500">
-</p>
+<div class="jumbotron">
+  <h1 class="">Denezia's short bio!!</h1>
+  <p> I was born in Worcester.</p>
+  <p> I grew up in Worcester. </p>
+  <p> My greatest dream is to fight injustice as a profession. </p>
+  <p> My family lives in Worcester as well. </p>
+  <img src = "static/images/denezia.jpg" height="300">
+</div>
 
 
 {% endblock %}
