--- a/templates/main.html
+++ b/templates/main.html
@@ -3,9 +3,9 @@
 
 <div class="jumbotron" style="background-color: #F3F3F3;">
   <div class="mid">
-    <img src = "static/images/foodfeelslogo.png" width="500">
+    <img src = "static/images/foodfeelslogo.png" width="500" style="display: block; margin: 0 auto;">
   </div>
-  </p>
+  <!-- </p> -->
   <p> Rate or view reviews on the food in the dinning halls before you choose Usdan or Sherman.</p>
 </div>
 
