--- a/templates/person1.html
+++ b/templates/person1.html
@@ -7,7 +7,7 @@
   <p> I grew up in Houston, Texas. </p>
   <p> My greatest dream is to help and motivate youth towards a path of higher education. </p>
   <p> My family live in Houston as well. </p>
-  <img src = "static/images/cat.jpg" height="300">
+  <img src = "static/images/cat.jpg" height="300" style="display: block; margin: 0 auto;">
 </div>
 
 
