--- a/templates/person2.html
+++ b/templates/person2.html
@@ -7,7 +7,7 @@
   <p> I grew up in the Domican Republic most of my life. </p>
   <p> My greatest dream is to become a psychologisy and work with people in need of assistance with their speaking. </p>
   <p> I live in Amityville, a town in Long Island, New York. </p>
-  <img src = "static/images/dani.jpg" height="300">
+  <img src = "static/images/dani.jpg" height="300" style="display: block; margin: 0 auto;">
 </div>
 
 
