--- a/templates/person3.html
+++ b/templates/person3.html
@@ -7,7 +7,7 @@
   <p> I grew up in Harlem, New York. </p>
   <p> My greatest dream is to graduate from Brandeis and have a good job to live a comfortable life. </p>
   <p> My family live in Harlem,New York. </p>
-  <img src = "static/images/Lola.jpg" height="300">
+  <img src = "static/images/Lola.jpg" height="300" style="display: block; margin: 0 auto;">
 </div>
 
 
