--- a/templates/person4.html
+++ b/templates/person4.html
@@ -7,7 +7,7 @@
   <p> I grew up in Worcester. </p>
   <p> My greatest dream is to fight injustice as a profession. </p>
   <p> My family lives in Worcester as well. </p>
-  <img src = "static/images/denezia.jpg" height="300">
+  <img src = "static/images/denezia.jpg" height="300" style="display: block; margin: 0 auto;">
 </div>
 
 
