--- a/templates/yessenia.html
+++ b/templates/yessenia.html
@@ -12,7 +12,7 @@
   </p>
   <p> My parents and 11 year old sister live with me in Waltham. But the rest of my family lives in Mexico. </p>
 
-  <img src = "static/images/yessi.jpg" height="300">
+  <img src = "static/images/yessi.jpg" height="300" style="display: block; margin: 0 auto;">
 
 </div>
 
